<resources>
    <string name="app_name">Ajol Paper</string>
    <string name="title_activity_settings">Ajol Paper</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_modify">Modify</string>
    <string name="no_name">No Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="choose">Choose picture</string>
    <string name="radius_label">Radius:</string>
    <string name="radius_value">30</string>

    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="uri">Uri</string>
    <string name="no_image">No Image</string>

    <string name="buttonGoToWallPaper">Wallpapers</string>
    <string name="buttonGoToDefault">Default pictures</string>
    <string name="tvRefreshTime">Refresh Time (min)</string>
    <string name="etRefreshTime">30</string>
    <string name="tvDefault">Use default pictures</string>
    <string name="buttonSave">Save</string>

    <string name="title_location_permission">Permission</string>
    <string name="text_location_permission">The app needs your location</string>
    <string name="ok">OK</string>

    <string name="search_hint">Search wallpapers</string>
</resources>
