<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/fragment_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100" />

    <!--fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map"
        tools:context="com.ajol.ajolpaper.SettingsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_weight="5" /-->


    <Button
        android:id="@+id/buttonGoToWallPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonGoToWallPaper"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonGoToDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonGoToDefault"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="96dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tvRefreshTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRefreshTime" />

        <EditText
            android:id="@+id/etRefreshTime"
            android:hint="@string/etRefreshTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp" />

    </LinearLayout>


    <Switch
        android:id="@+id/switchDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:text="@string/tvDefault"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonSave"
        android:layout_weight="1" />




</LinearLayout>



<!--?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/fragment_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout-->